# robotframework-jsonrpcremote

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  robot.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
examples/simple-robot-jsonrpcserver/: README.md  pyproject.toml
examples/simple-robot-jsonrpcserver/src/simple_robot_jsonrpcserver/: __main__.py
src/JsonRpcRemote/: Echo.py  __init__.py  __version__.py
tests/perf_comparison/: start_xml_rpc_server.py
tests/robot/: IsolatedServerControl.py  LogCapture.py  ServerControl.py  ServerProbeLib.py  StdioEchoLib.py  TypedInitLib.py  __init__.robot  browser_server.robot  echo.robot  errors.robot  init_args.robot  init_kwargs.robot  log_forwarding.robot  shutdown.robot  simple.robot  simple_example.robot  simple_server.robot  simple_xml_rpc_server.robot  stdio_echo.robot  stdio_probe.robot  stdio_scope.robot  stdio_vars.py  stdio_windows.robot  typed_init.robot  types.robot  variables.robot
tests/robot/scope/: DummyLib.py  first.robot
tests/unit/: test_client_connection.py  test_endpoint.py  test_json_helpers.py  test_peer.py  test_protocol.py  test_server_cli.py  test_server_stdio.py
