[project]
name = "simple-robot-jsonrpcserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "robotframework-jsonrpcpeer",
    "robotframework-jsonrpcremote-protocol",
]

[project.scripts]
simple-robot-jsonrpcserver = "simple_robot_jsonrpcserver:__main__.run"

[tool.uv.sources]
robotframework-jsonrpcpeer = { workspace = true }
robotframework-jsonrpcremote-protocol = { workspace = true }
