[project]
name = "simple-robot-jsonrpcserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "jsonrpcpeer",
    "robotframework-jsonrpcremote-protocol",
]

[project.scripts]
simple-robot-jsonrpcserver = "simple_robot_jsonrpcserver:__main__.run"

[build-system]
requires = ["uv_build>=0.9.17,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
jsonrpcpeer = { workspace = true }
robotframework-jsonrpcremote-protocol = { workspace = true }
